# morash_boilerplate

./: .cookiecutterignore  .cookiecutterrc  .gitignore  CHANGELOG_UV.md  COMMIT_INSTRUCTIONS.md  COMPREHENSIVE_FIX.md  COOKIECUTTER_SUMMARY.md  COOKIECUTTER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.prod  FINAL_FIX.md  FINAL_SOLUTION.md  FIX_COOKIECUTTER_ISSUE.md  FIX_MAIN_DIRECTORY.md  FIX_TEMPLATE_STRUCTURE.md  PUSH_AND_TEST.md  QUICK_FIX.md  README.md  README_COOKIECUTTER.md  SETUP_COMPLETE.md  SOLUTION_APPLIED.md  TEMPLATE_SETUP.md  TEST_LOCAL.md  TEST_TEMPLATE.md  URGENT_FIX.md  UV_MIGRATION.md  UV_SETUP.md  analyze_template.py  cookiecutter.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_template.py  test_template.py  test_template_structure.py  verify_template.py
CONFIG/: api.py  authentication.py  billing.py  emails.py  logging.py  openai.py  platform.py  secrets.py  stripe.py  subnav.py  task_queue.py  translations.py
api/: serializers.py  urls.py  views.py
hooks/: post_gen_project.py
locale/: .silence
main/: admin.py  models.py  urls.py  views.py
modules/: post.py  urls.py
modules/admin/: admin.py  apps.py
modules/ai/: openai.py
modules/authentication/: forms.py  models.py  tokens.py  urls.py  views.py
modules/billing/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
modules/billing/migrations/: 0001_initial.py  0002_initial.py
modules/context_processors/: __init__.py
modules/emails/: apps.py  tasks.py  utils.py
modules/examples/: apps.py  forms.py  models.py  seeder.py  subnav.py  tasks.py  urls.py  views.py
modules/examples/migrations/: 0001_initial.py
modules/forms/: __init__.py
modules/nginx/: nginx.conf
modules/payments/: apps.py  models.py  signals.py  urls.py  utils.py  views.py  webhook_handler.py  webhooks.py
modules/secrets/: __init__.py  aws.py  azure.py  base.py  env.py  infisical.py
modules/templates/components/: alerts.html  modal.html  platform_alerts.html  subnav.html
modules/templates/rosetta/: base.html  file-list.html  form.html  (+1 more)
modules/templatetags/: forms.py  utils.py
modules/utils/: config.py  images.py  logging.py  pdf.py  subnav.py  urls.py  views.py
modules/views/: __init__.py
modules/websockets/: consumers.py  urls.py  utils.py  views.py
theme/static_src/: package.json  tailwind.config.js
{{cookiecutter.main_app_name}}/: admin.py  apps.py  urls.py  views.py
{{cookiecutter.main_app_name}}/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
(+53 files in other folders)
