[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.platform_version }}"
description = "{{ cookiecutter.description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
requires-python = ">=3.10"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.7.2",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "autobahn==23.6.2",
    "Automat==22.10.0",
    "azure-keyvault-secrets==4.8.0",
    "azure-identity==1.16.0",
    "binaryornot==0.4.4",
    "boto3==1.34.122",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "channels==4.0.0",
    "channels-redis==4.2.0",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cookiecutter==2.5.0",
    "cryptography==42.0.2",
    "daphne==4.0.0",
    "Django==5.0.2",
    "django-allauth==0.63.1",
    "django-browser-reload==1.12.1",
    "django-impersonate==1.9.2",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "django-rosetta==0.10.0",
    "django-tailwind==3.8.0",
    "django-unfold==0.26.0",
    "Faker==25.4.0",
    "huey==2.5.0",
    "hyperlink==21.0.0",
    "idna==3.6",
    "incremental==22.10.0",
    "infisical-python==2.1.8",
    "Jinja2==3.1.3",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "msgpack==1.0.7",
    "logtail-python==0.2.10",
    "oauthlib==3.2.2",
    "openai==1.35.3",
    "openpyxl==3.1.3",
    "psycopg2==2.9.9",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "Pygments==2.17.2",
    "PyJWT==2.8.0",
    "pyOpenSSL==24.0.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.8",
    "python-slugify==8.0.4",
    "PyYAML==6.0.1",
    "qrcode==7.4.2",
    "redis==5.0.1",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "rich==13.7.0",
    "sendgrid==6.11.0",
    "sentry-sdk==2.5.1",
    "service-identity==24.1.0",
    "setuptools==69.5.1",
    "six==1.16.0",
    "stripe==9.8.0",
    "sqlparse==0.4.4",
    "tablib==3.6.1",
    "text-unidecode==1.3",
    "Twisted==23.10.0",
    "txaio==23.1.1",
    "types-python-dateutil==2.8.19.20240106",
    "typing_extensions==4.9.0",
    "tzdata==2023.4",
    "urllib3==2.2.1",
    "weasyprint==52.5",  # This should be kept pinned to avoid issues with the latest versions.
    "zope.interface==6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
